--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,6 +32,8 @@
       "help": "The Friendly ID is an **optional** value.\n\n###### Example:\n\n`Virtual Keypad`"
     },
 
+    "Configuration": "Configuration",
+    "Connect": "Connect",
     "Submit": "Submit",
     "Reset": "Reset",
     "Cancel": "Cancel",
