Add de-DE, fr-CA, nl-NL localization

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -157,7 +157,7 @@
       "MC": "Mastercard",
       "AMEX": "AmEx",
       "DISCOVER": "Discover",
-      "DINERS_CLUB": "Diner's Club",
+      "DINERS_CLUB": "Diners Club",
       "JCB": "JCB",
       "MAESTRO": "Maestro",
       "SOLO": "Solo",
